Set debugger buffer-local variables for command/process and source buffers. Set default directory in command buffer. Source buffer now has last command invocation and a pointer to the process buffer.

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,6 +25,8 @@ test-regexp.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-regexp2.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+test-scriptbuf.run:
+	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-track.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 
