--- a/ruby/Makefile.am
+++ b/ruby/Makefile.am
@@ -1,5 +1,5 @@
-# lisp_files := $(wildcard *.el)
-# lisp_LISP = $(lisp_files)
+lisp_files := $(wildcard *.el)
+lisp_LISP = $(lisp_files)
 
 %: 
 	$(MAKE) -C .. $@
