--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -1,3 +1,9 @@
+lispdir = @lispdir_dbgr@/python
 lisp_files := $(wildcard *.el)
 lisp_LISP = $(lisp_files)
+EXTRA_DIST = $(lisp_files) 
+
+%: 
+	$(MAKE) -C .. $@
+
 
