--- a/ruby/Makefile.am
+++ b/ruby/Makefile.am
@@ -1,5 +1,7 @@
+lispdir = @lispdir_dbgr@/ruby
 lisp_files := $(wildcard *.el)
 lisp_LISP = $(lisp_files)
+EXTRA_DIST = $(lisp_files) 
 
 %: 
 	$(MAKE) -C .. $@
