Start cmdbuf tests. Add predicates to see if a buffer is a debugger script or command.

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,6 +14,8 @@ check: $(CHECK_FILES)
 
 
 # FIGURE out how to DRY the run rules.
+test-cmdtbuf.run:
+	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-core.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-file.run:
