Bug fix: minibuffer history was not saving prior of debugger invocations. scriptbuf -> srcbuf.

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,9 +26,11 @@ test-lochist.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-regexp.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
-test-regexp2.run:
+test-regexp-python.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
-test-scriptbuf.run:
+test-regexp-ruby.run:
+	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+test-srcbuf.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-track.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
