Create a global hash which contains regular expression information for each of the debuggers. Each debugger has a regular expression to match a prompt location and a regular expression for the prompt string that comint uses. However there may be other regular expressions for things like stack traces.
Part of a long-needed refactoring. More to follow. Expect breakage.

--- a/configure.ac
+++ b/configure.ac
@@ -15,6 +15,7 @@ lispdir=${lispdir}/dbgr
 AM_CONDITIONAL(INSTALL_EMACS_LISP, test "x$lispdir" != "x")
 
 AC_CONFIG_FILES([Makefile \
+		 init/Makefile \
 		 python/Makefile \
 		 ruby/Makefile \
 		 ])
