--- a/init/Makefile.am
+++ b/init/Makefile.am
@@ -1,4 +1,4 @@
-lispdir = @lispdir_dbgr@/ruby
+lispdir = @lispdir_dbgr@/init
 lisp_files := $(wildcard *.el)
 lisp_LISP = $(lisp_files)
 EXTRA_DIST = $(lisp_files) 
