elisp-comp: remove temp script. Makefile.am: Wasn't running cmdbuf test. helper.el: current best guess at a setter method.

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,7 +14,7 @@ check: $(CHECK_FILES)
 
 
 # FIGURE out how to DRY the run rules.
-test-cmdtbuf.run:
+test-cmdbuf.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-core.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
