Fix up and simplify short-key mode so the setting is saved in the process buffer and propagated to the source buffers encountered.
key.el: add 's' for step.
test/behave.el: add assert-raises!

track-mode.el: use standard name -setup instead of -body. Pass an explicit parameter.

window.el: remove older, now-unused code.

--- a/Makefile.am
+++ b/Makefile.am
@@ -34,6 +34,8 @@ test-srcbuf.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-send.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+test-shortkey.run:
+	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-track.run:
 	(cd $(srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 
