--- a/configure.ac
+++ b/configure.ac
@@ -15,6 +15,7 @@ AM_CONDITIONAL(INSTALL_EMACS_LISP, test "x$lispdir_dbgr" != "x")
 
 AC_CONFIG_FILES([Makefile \
 		 dbgr/Makefile \
+		 dbgr/gdb/Makefile \
 		 dbgr/init/Makefile \
 		 dbgr/python/Makefile \
 		 dbgr/ruby/Makefile \
