dbgr.el test-dbgr.el: Add ability to get list of feature loaded with dbgr and unload them. This makes it possible to reload dbgr without leaving the Emacs. bp.el: More work needed on testing.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -12,9 +12,13 @@ CHECK_FILES = $(notdir $(test_files:.el=.run))
 check: $(CHECK_FILES)
 
 # FIGURE out how to DRY the run rules.
+test-bp.run:
+	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-cmdbuf.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-core.run:
+	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+test-dbgr.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-file.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
