Start rdebug. Will probably reorganize directories down the line.

--- a/configure.ac
+++ b/configure.ac
@@ -18,7 +18,8 @@ AC_CONFIG_FILES([Makefile \
 		 dbgr/gdb/Makefile \
 		 dbgr/init/Makefile \
 		 dbgr/python/Makefile \
-		 dbgr/ruby/Makefile \
+		 dbgr/rbdbgr/Makefile \
+		 dbgr/rdebug/Makefile \
 		 test/Makefile \
 		 ])
 AC_OUTPUT
