Base the specific debugger track-mode-maps on the generic track-mode map. Start a track-mode unit test.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -40,6 +40,8 @@ test-shortkey.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-track.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+test-track-mode.run:
+	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 
 .PHONY: $(CHECK_FILES)
 
