All common code now pushed to common directory one level don. First part an overall filesystem reorganization. Later on we will remove init, and rename python to pydbgr, and add pydb.

--- a/configure.ac
+++ b/configure.ac
@@ -15,8 +15,9 @@ AM_CONDITIONAL(INSTALL_EMACS_LISP, test "x$lispdir_dbgr" != "x")
 
 AC_CONFIG_FILES([Makefile \
 		 dbgr/Makefile \
+		 dbgr/common/Makefile \
+		 dbgr/common/init/Makefile \
 		 dbgr/gdb/Makefile \
-		 dbgr/init/Makefile \
 		 dbgr/python/Makefile \
 		 dbgr/rbdbgr/Makefile \
 		 dbgr/rdebug/Makefile \
