Forgot one python->pydbgr

--- a/dbgr/pydbgr/Makefile.am
+++ b/dbgr/pydbgr/Makefile.am
@@ -1,4 +1,4 @@
-lispdir = @lispdir_dbgr@/python
+lispdir = @lispdir_dbgr@/pydbgr
 lisp_files := $(wildcard *.el)
 lisp_LISP = $(lisp_files)
 EXTRA_DIST = $(lisp_files) 
