--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,20 @@
-AC_INIT(emacs-dbgr, 0.01vc,)
+AC_INIT(emacs-dbgr, 0.02vc,)
 AC_CONFIG_SRCDIR(dbgr.el)
 AM_INIT_AUTOMAKE
 AM_MAINTAINER_MODE
+
+AC_PATH_PROG(EMACS, emacs, no)
+if test x$EMACS != xno ; then
+  $EMACS -batch -q -no-site-file -eval \
+  '(if (<= emacs-major-version 22)
+     (progn
+       (error "You need GNU Emacs 23 or better.")
+       (kill-emacs 1)
+     ))'
+  if test $? -ne 0 ; then
+    AC_MSG_ERROR([Can't continue with this version of Emacs])
+  fi
+fi
 
 ##
 ## Find out where to install the debugger emacs lisp files
