Set default value for EMACS to, well, "emacs".

--- a/configure.ac
+++ b/configure.ac
@@ -3,17 +3,15 @@ AC_CONFIG_SRCDIR(dbgr.el)
 AM_INIT_AUTOMAKE
 AM_MAINTAINER_MODE
 
-AC_PATH_PROG(EMACS, emacs, no)
-if test x$EMACS != xno ; then
-  $EMACS -batch -q -no-site-file -eval \
+AC_PATH_PROG([EMACS], [emacs], [emacs])
+$EMACS -batch -q -no-site-file -eval \
   '(if (<= emacs-major-version 22)
      (progn
        (error "You need GNU Emacs 23 or better.")
        (kill-emacs 1)
      ))'
-  if test $? -ne 0 ; then
+if test $? -ne 0 ; then
     AC_MSG_ERROR([Can't continue with this version of Emacs])
-  fi
 fi
 
 ##
