Add trepan and trepanx debuggers.

--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,8 @@ AC_CONFIG_FILES([Makefile \
 		 dbgr/pydbgr/Makefile \
 		 dbgr/rbdbgr/Makefile \
 		 dbgr/rdebug/Makefile \
+		 dbgr/trepan/Makefile \
+		 dbgr/trepanx/Makefile \
 		 test/Makefile \
 		 ])
 AC_OUTPUT
