DRY via dbgr-suggest-lang-file. Fix up tests related to this region.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -24,6 +24,8 @@ test-dbgr.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-file.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+test-lang.run: 
+	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-loc.run: 
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-lochist.run:
