Administrivia around adding zshdb properly.

--- a/dbgr/zshdb/Makefile.am
+++ b/dbgr/zshdb/Makefile.am
@@ -1,4 +1,4 @@
-lispdir = @lispdir_dbgr@/trepan
+lispdir = @lispdir_dbgr@/zshdb
 lisp_files := $(wildcard *.el)
 lisp_LISP = $(lisp_files)
 EXTRA_DIST = $(lisp_files) 
