Move buffer-related files into a separate directory. Will help future growth.

--- a/configure.ac
+++ b/configure.ac
@@ -31,6 +31,7 @@ AM_CONDITIONAL(INSTALL_EMACS_LISP, test "x$lispdir_dbgr" != "x")
 AC_CONFIG_FILES([Makefile \
 		 dbgr/Makefile \
 		 dbgr/common/Makefile \
+		 dbgr/common/buffer/Makefile \
 		 dbgr/common/init/Makefile \
 		 dbgr/gdb/Makefile \
 		 dbgr/pydbgr/Makefile \
