--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -16,6 +16,10 @@ check: $(CHECK_FILES)
 # FIGURE out how to DRY the run rules.
 test-bp.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+test-bt-rdebug.run:
+	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+# test-bt-trepan.run:
+# 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-buf-bt.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-buf-cmd.run:
