--- a/dbgr/common/buffer/Makefile.am
+++ b/dbgr/common/buffer/Makefile.am
@@ -1,9 +1,9 @@
-lispdir = @lispdir_dbgr@/common/buffer
+lispdir = @lispdir_dbgr@/$(notdir $(subdir))
 lisp_files := $(wildcard *.el)
 lisp_LISP = $(lisp_files)
 EXTRA_DIST = $(lisp_files) 
 MOSTLYCLEANFILES = *.elc
 
 %: 
-	$(MAKE) -C .. $@
+	$(MAKE) -C ../../.. $@
 
