--- a/dbgr/lang/Makefile.am
+++ b/dbgr/lang/Makefile.am
@@ -1,4 +1,4 @@
-lispdir = @lispdir_dbgr@/rbdbgr
+lispdir = @lispdir_dbgr@/$(notdir $(subdir))
 lisp_files := $(wildcard *.el)
 lisp_LISP = $(lisp_files)
 EXTRA_DIST = $(lisp_files) 
