--- a/dbgr/gdb/Makefile.am
+++ b/dbgr/gdb/Makefile.am
@@ -1,6 +1,1 @@
-lispdir = @lispdir_dbgr@/$(notdir $(subdir))
-lisp_files := $(wildcard *.el)
-lisp_LISP = $(lisp_files)
-EXTRA_DIST = $(lisp_files) 
-
-
+include ../common.mk
