--- a/dbgr/trepanx/Makefile.am
+++ b/dbgr/trepanx/Makefile.am
@@ -1,4 +1,1 @@
-lispdir = @lispdir_dbgr@/trepanx
-lisp_files := $(wildcard *.el)
-lisp_LISP = $(lisp_files)
-EXTRA_DIST = $(lisp_files) 
+include ../common.mk
