--- a/dbgr/Makefile.am
+++ b/dbgr/Makefile.am
@@ -1,11 +1,1 @@
-SUBDIRS = common gdb lang pydbgr rdebug trepan trepanx zshdb
-MOSTLYCLEANFILES = *.elc
-EXTRA_DIST = common.mk
-
-test: check
-
-check:
-	$(MAKE) -C ../test $@
-
-
-
+SUBDIRS = common debugger lang
