--- a/dbgr/common/init/Makefile.am
+++ b/dbgr/common/init/Makefile.am
@@ -1,9 +1,5 @@
-lispdir = @lispdir_dbgr@/common/init
+lispdir = @lispdir_dbgr@/common/$(notdir $(subdir))
 lisp_files := $(wildcard *.el)
 lisp_LISP = $(lisp_files)
 EXTRA_DIST = $(lisp_files) 
 MOSTLYCLEANFILES = *.elc
-
-%: 
-	$(MAKE) -C .. $@
-
