Add  zshdb "backtrace"/frame regexp. So dbgr-backtrace-init now works for zshdb.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -58,6 +58,8 @@ test-regexp-trepanx.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-regexp-rdebug.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+test-regexp-zshdb.run:
+	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-srcbuf.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-send.run:
