Update trepanx location regexp which recently changed.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -40,6 +40,8 @@ test-lang.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-loc.run: 
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+test-loc-regexp-trepanx.run: 
+	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-lochist.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-pydbgr.run:
