ruby.el: add pattern for rails traceback. source.el: don't assume we have a local keymap test-* DRY a little.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -20,6 +20,8 @@ test-bt-pydbgr.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-bt-rdebug.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+test-bt-ruby.run:
+	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-bt-trepan.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-bt-trepanx.run:
