Add kshdb to list of full-support debuggers. Moved and expanded from common/init/kshdb.el

--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,7 @@ AC_CONFIG_FILES([Makefile \
 		 dbgr/debugger/Makefile \
 		 dbgr/debugger/bashdb/Makefile \
 		 dbgr/debugger/gdb/Makefile \
+		 dbgr/debugger/kshdb/Makefile \
 		 dbgr/debugger/pydbgr/Makefile \
 		 dbgr/debugger/rdebug/Makefile \
 		 dbgr/debugger/remake/Makefile \
