We can now run "dbgr-remake" to get a top-level remake shell.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -48,6 +48,8 @@ test-loc-regexp-trepanx.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-lochist.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
+test-remake.run:
+	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-pydbgr.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 test-rdebug.run:
