More complete customization of command strings used for basic (gdb-like) command set. This is much needed in perldb which is very different. More complete dbgr-perldb mode. Add positioning at a backtrace line in POSIX shells and perldb.

--- a/dbgr/debugger/Makefile.am
+++ b/dbgr/debugger/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = bashdb gdb kshdb pydbgr rdebug remake trepan trepanx zshdb
+SUBDIRS = bashdb gdb kshdb perldb pydbgr rdebug remake trepan trepanx zshdb
 EXTRA_DIST = common.mk
 
 .PHONY: check all
