--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,7 @@ AC_CONFIG_FILES([Makefile \
 		 dbgr/debugger/bashdb/Makefile \
 		 dbgr/debugger/gdb/Makefile \
 		 dbgr/debugger/kshdb/Makefile \
+		 dbgr/debugger/perldb/Makefile \
 		 dbgr/debugger/pydbgr/Makefile \
 		 dbgr/debugger/rdebug/Makefile \
 		 dbgr/debugger/remake/Makefile \
