Add "make check-short" which reduces unuseful output from "make check". Correct problem in trepan init.el: (format ...) doesn't work here.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -13,6 +13,9 @@ CHECK_FILES = $(notdir $(test_files:.el=.run))
 
 check: $(CHECK_FILES)
 
+check-short:
+	$(MAKE) check 2>&1  | ruby ../make-check-filter.rb
+
 test-%.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 
