Makefile.am: Add --tasks/tasks and *short targets. move routine from source to helper to remove compile warning.

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,6 +20,15 @@ test: check
 check-short:
 	$(MAKE) check 2>&1  | ruby make-check-filter.rb
 
+short:
+	$(MAKE) 2>&1 >/dev/null | ruby make-check-filter.rb
+
+%.short:
+	$(MAKE) $(@:.short=) 2>&1 >/dev/null
+
+tasks:
+	remake --tasks | grep -v '/' | grep -v '\.'
+
 
 
 
