--- a/dbgr/common/Makefile.am
+++ b/dbgr/common/Makefile.am
@@ -1,6 +1,8 @@
 SUBDIRS = buffer init
 MOSTLYCLEANFILES = *.elc
 
+include $(top_srcdir)/common.mk
+
 lispdir = @lispdir_dbgr@/$(notdir $(subdir))
 lisp_files := $(wildcard *.el)
 
