--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,5 +1,5 @@
-# Whatever it is you want to do, it should be forwarded to the 
-# to top-level directories
+include $(top_srcdir)/common.mk
+
 PHONY=check test all
 EXTRA_DIST=gcd.py gcd.rb
 
@@ -19,6 +19,8 @@ check-short:
 test-%.run:
 	(cd $(top_srcdir)/test && $(EMACS) -batch -Q -l $(@:.run=.el) )
 
+# Whatever it is you want to do, it should be forwarded to the 
+# to top-level directories
 %: 
 	$(MAKE) -C .. $@
 
