--- a/dbgr/common/buffer/Makefile.am
+++ b/dbgr/common/buffer/Makefile.am
@@ -1,3 +1,5 @@
+include $(top_srcdir)/common.mk
+
 lispdir = @lispdir_dbgr@/common/buffer
 lisp_files := $(wildcard *.el)
 lisp_LISP = $(lisp_files)
