--- a/dbgr/debugger/Makefile.am
+++ b/dbgr/debugger/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = bashdb gdb kshdb perldb pydbgr rdebug remake \
-	trepan trepanx trepan8 zshdb
+	trepan trepanpl trepanx trepan8 zshdb
 EXTRA_DIST = common.mk
 
 .PHONY: check all
