--- a/configure.ac
+++ b/configure.ac
@@ -42,7 +42,7 @@ AC_CONFIG_FILES([Makefile \
 		 dbgr/debugger/rdebug/Makefile \
 		 dbgr/debugger/remake/Makefile \
 		 dbgr/debugger/trepan/Makefile \
-		 dbgr/debugger/trepanpl/Makefile \
+		 dbgr/debugger/trepan.pl/Makefile \
 		 dbgr/debugger/trepanx/Makefile \
 		 dbgr/debugger/trepan8/Makefile \
 		 dbgr/debugger/zshdb/Makefile \
