--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-/*.elc
+*.elc
+*~
+elc-stamp
 /*.tar.gz
-/*~
 /COPYING
 /Makefile
 /Makefile.in
@@ -14,3 +15,4 @@
 /elc-temp
 /install-sh
 /missing
+script
