Makefile.am: adjust options because in Emacs 24 --quick doesn't include site file loc.el: small grammar thing.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -20,7 +20,7 @@ check-short:
 	$(MAKE) check 2>&1  | ruby ../make-check-filter.rb
 
 test-%.run:
-	(cd $(top_srcdir)/test && $(EMACS) --batch --quick --load $(@:.run=.el))
+	(cd $(top_srcdir)/test && $(EMACS) --batch --no-site-file --no-splash --load $(@:.run=.el))
 
 # Whatever it is you want to do, it should be forwarded to the 
 # to top-level directories
