Remove old init directory and convert last debugger pydb to new format.

--- a/dbgr/debugger/Makefile.am
+++ b/dbgr/debugger/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = bashdb gdb kshdb pdb perldb pydbgr rdebug remake \
+SUBDIRS = bashdb gdb kshdb pdb perldb pydb pydbgr rdebug remake \
 	trepan trepan.pl trepanx trepan8 zshdb
 EXTRA_DIST = common.mk
 
