Add trepan3k debugger

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
 *.elc
 *~
-elc-stamp
 /*.tar.gz
 /COPYING
-/Makefile
-/Makefile.in
 /README
 /aclocal.m4
 /autom4te.cache
 /config.log
 /config.status
 /configure
-/elc-stamp
-/elc-temp
 /install-sh
 /missing
+Makefile
+Makefile.in
+elc-stamp
+elc-temp
 script
