--- a/realgud/debugger/Makefile.am
+++ b/realgud/debugger/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = bashdb gdb kshdb pdb perldb pydb pydbgr rdebug remake \
-	trepan trepan3k trepan.pl trepanx trepan8 zshdb
+	trepan trepan2 trepan3k trepan.pl trepanx trepan8 zshdb
 EXTRA_DIST = common.mk
 
 .PHONY: check all
