--- a/realgud/common/Makefile.am
+++ b/realgud/common/Makefile.am
@@ -1,10 +1,4 @@
 SUBDIRS = buffer
-MOSTLYCLEANFILES = *.elc
 
 include $(top_srcdir)/common.mk
-
-lispdir = @lispdir_dbgr@/$(notdir $(subdir))
-lisp_files := $(wildcard *.el)
-
-EXTRA_DIST = $(lisp_files)
-lisp_LISP = $(lisp_files)
+lispdir = @lispdir_realgud@/$(notdir $(subdir))
