--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,9 +1,9 @@
 include $(top_srcdir)/common.mk
 
 PHONY=check test all
-EXTRA_DIST=gcd.py gcd.rb bt-helper.el regexp-helper.el
+EXTRA_DIST += gcd.py gcd.rb
 
-all: 
+all:
 
 #: same thing as "check"
 test: check
@@ -22,8 +22,7 @@ check-short:
 test-%.run:
 	(cd $(top_srcdir)/test && $(EMACS) --batch --no-site-file --no-splash --load $(@:.run=.el))
 
-# Whatever it is you want to do, it should be forwarded to the 
+# Whatever it is you want to do, it should be forwarded to the
 # to top-level directories
-%: 
+%:
 	$(MAKE) -C .. $@
-
